--- a/meteorshower.html
+++ b/meteorshower.html
@@ -5,7 +5,6 @@
 <body>
   {{> nav}} 
   {{> list}} 
-  {{> dash}}
   {{> submit}}
   {{> edit}}
   {{> view}}
@@ -21,17 +20,19 @@
 </template>
 
 <template name="item">
-  <div class="item {{selected}}">
-    <div style='float:left;width:25%;padding-left:3%;font-weight:bold;font-size:150%;' class="name">{{name}}</div>
+  <div class="item row {{selected}}">
+    <div style='float:left;width:25%;padding-left:3%;font-weight:bold;font-size:150%;' class="name"><a class='view'><img style='height:50px;width:50px;padding:8px;' src='{{image_url}}'/>{{name}}</a></div>
     <div style='float:left;width:30%;' class="description">foobar {{description}}</div>
-    <div style='float:left;width:35%;' class="date">{{date}}</div>
-    <div style='float:right:width:10%;font-weight:bold;' class="score">{{score}}</div>
+    <div style='float:left;width:35%;'>
+      <div class="date">Sumbitted: {{date}}</div>
+      <div class="author">By: {{author}}</div>
+    </div>
+    <div style='float:right:width:10%;font-weight:bold;'>
+      <a class="dec" href="#"><b class='icon-minus-sign'></b></a>   
+      <span style='font-size:larger;font-weight:bold;' class='score'>{{score}}</score>
+      <a class="inc" href="#"><b class='icon-plus-sign'></b></a>   
+    </div>
   </div>
-</template>
-
-<template name="dash">
-  <input type="button" style='margin-left:20px;' class="inc" onclick="document.location.hash='#inc';" value="UpVote" /><br/>
-  <input type="button" style='margin-left:20px;' class="new" onclick="$('#modal_create').modal('show');" value="New" />
 </template>
 
 <template name="view">
@@ -40,19 +41,19 @@
     <a href="#" style="margin-left:15px;" data-dismiss="modal" class="close pull-right;">&times;</a>
     <h3 class="item_title">App Name</h3>
   </div>
-  <div style="padding:0px;overflow:hidden;" class="modal-body">
-    <p>App Image</p>
-    <p>App Name</p>
-    <p>App Description</p>
-    <p>App Author</p>
-    <p>App Submit Date</p>
-    <p>App Score</p>
-    <p>App Links</p>
-    <p style='text-align:center;margin-bottom:25px;'><a href="#" onclick="console.log('Opening app...');" style='text-decoration:none;' class="btn-large btn-inverse">Run on OpenShift <b class='icon-cog'></b></a></p>
+  <div style="padding:17px;overflow-y:auto;" class="modal-body">
+    <div class'image_url'><a href='{{demo_url}}'><img style='height:250px;width:250px;' src='{{image_url}}'/></a></div>
+    <div class='name'>{{name}}</div>
+    <div class='description'>{{description}}</div>
+    <div class='author'>By: {{author}}</div>
+    <div class='date'>Submitted on: {{date}}</div>
+    <div class='score'>{{score}}</div>
+    <div class='source_url'>Source code: <a href='{{source_url}}'>{{source_url}}</a></div>
+    <p><a href="#" onclick="console.log('Opening app...');" style='text-decoration:none;margin:0% 20% 0% 20%;width:60%;' class="btn btn-large btn-inverse btn-block">Run on OpenShift <b class='icon-cog'></b></a></p>
   </div>
   <div class="modal-footer">
-    {{# if currentUser }}<a href="#" onclick="( $('#modal_view').modal('hide') && $('#modal_edit').modal('show'))" style='margin-right:10px;' class="pull-left btn btn-info">Settings <b class='icon-wrench'></b></a>{{/if}}
-    <a href="#" style="margin-left:15px;" onclick="console.log('Opening app...');" class="pull-right btn btn-primary">Visit <b class='icon-globe'></b></a>
+    {{# if currentUser }}<a href="#" onclick="($('#modal_edit').modal('show') && $('#modal_view').modal('hide'))();" style='margin-right:10px;' class="pull-left btn btn-info">Settings <b class='icon-wrench'></b></a>{{/if}}
+    <a href="{{demo_url}}" style="margin-left:15px;" onclick="console.log('Opening app...');" class="pull-right btn btn-primary">Visit <b class='icon-globe'></b></a>
     <a href="#" data-dismiss="modal" onclick="$('#modal_view').modal('hide');" class="btn pull-right">Cancel <b class='icon-remove'></b></a>
   </div>
 </div>
@@ -62,33 +63,39 @@
   <div class="test-area modal fade in" style="display:none;" id="modal_edit">
   <div class="modal-header">
     <a href="#" data-dismiss="modal" class="close">&times;</a>
-    <h3 class="method_test_title">Submit App</h3>
+    <h3 class="method_test_title">Edit</h3>
   </div>
-  <div style="padding:0px;overflow:hidden;" class="modal-body">
+  <div style="padding:17px;overflow-y:scroll;" class="modal-body">
     <form id="test-code" class="form-horizontal" action="#" onsubmit="$('#modal_edit').modal('hide');return false;">
       <fieldset style="margin:0px;padding:0px;">
-        <div id="method_test_fields" class="fields round-top method_test_fields">
-          <div class="test_inputs">
-            <div class="control-group">
-              <label class="control-label" for="keywords">keywords</label>
-              <div class="controls">
-                <input id="keywords" name="keywords" size="30" type="text" placeholder="">
-              </div>
-            </div> 
-            <div class="control-group">
-              <label class="control-label" for="page">page</label>
-              <div class="controls">
-                <input id="page" name="page" size="30" type="text" placeholder="">
-              </div>
-            </div>
-          </div>
-        </div>
+        <label for="name">Name</label>
+        <input id="name" name="name" size="30" type="text" value="{{name}}" placeholder='Name your application&hellip;' />
+        <br/>
+        <label for="description">Description</label>
+        <input id="description" name="description" size="30" type="text" value="{{description}}">
+        <br/>
+        <label for="image_url">Image URL</label>
+        <input id="image_url" name="image_url" size="30" type="text" value="{{image_url}}" placeholder="http://">
+        <br/>
+        <label for="source_url">Source URL</label>
+        <input id="source_url" name="source_url" size="30" type="text" value="{{source_url}}" placeholder="http://github.com/">
+        <br/>
+        <label for="demo_url">Demo URL</label>
+        <input id="demo_url" name="demo_url" size="30" type="text" value="{{demo_url}}" placeholder="">
+        <br/>
+        <label for="cartridge_deps">Cartridge Dependencies</label>
+        <input id="cartridge_deps" name="cartridge_deps" size="30" type="text" value="{{cartridge_deps}}" placeholder="nodejs mongodb-2.2">
+        <br/>
+        <label for="score">Score</label>
+        <input id="score" name="score" size="30" type="text" value="{{score}}" placeholder="">
+        <br/>
+        <div class="author">By: {{author}}</div>
       </fieldset>
     </form>
   </div>
   <div class="modal-footer">
-    <a href="#" style="margin-left:15px;" onclick="test_submit();" class="btn-primary btn pull-right">Save <b class='icon-ok'></b></a>
-    <a href="#" onclick="test_submit();" class="btn-danger btn pull-left">Delete <b class='icon-trash'></b></a>
+    <a href="#" style="margin-left:15px;" class="btn-primary btn pull-right save">Save <b class='icon-ok'></b></a>
+    <a href="#" class="btn-danger btn pull-left delete">Delete <b class='icon-trash'></b></a>
     <a href="#" data-dismiss="modal" onclick="$('#modal_edit').modal('hide');" class="btn pull-right">Cancel <b class='icon-remove'></b></a>
   </div>
 </div>
@@ -98,32 +105,28 @@
   <div class="test-area modal fade in" style="display:none;" id="modal_create">
   <div class="modal-header">
     <a href="#" data-dismiss="modal" class="close">&times;</a>
-    <h3 class="method_test_title">Submit App</h3>
+    <h3 class="modal_title">New Showcase Item</h3>
   </div>
-  <div style="padding:0px;overflow:hidden;" class="modal-body">
-    <form id="test-code" class="form-horizontal" action="#" onsubmit="$('#modal_create').modal('hide');return false;">
-      <fieldset style="margin:0px;padding:0px;">
-        <div id="method_test_fields" class="fields round-top method_test_fields">
-          <div class="test_inputs">
-            <div class="control-group">
-              <label class="control-label" for="keywords">keywords</label>
-              <div class="controls">
-                <input id="keywords" name="keywords" size="30" type="text" placeholder="">
-              </div>
-            </div>
-            <div class="control-group">
-              <label class="control-label" for="page">page</label>
-              <div class="controls">
-                <input id="page" name="page" size="30" type="text" placeholder="">
-              </div>
-            </div>
-          </div>
-        </div>
+  <div style="padding:17px;overflow-y:scroll;" class="modal-body">
+    <form action="#" onsubmit="$('#modal_create').modal('hide');return false;">
+      <fieldset>
+        <label>Name</label>
+        <input id='name' name='name' style="width:95%;" type="text" placeholder="Name your application&hellip;" />
+        <label>Description</label>
+        <textarea id='description' name='description' style="width:95%;" rows="3"></textarea>
+        <label>Image URL</label>
+        <input id='image_url' name='image_url' style="width:95%;" type="text" placeholder="http://&hellip;" />
+        <label>Source URL</label>
+        <input id='source_url' name='source_url' style="width:95%;" type="text" placeholder="http://github.com/&hellip;" />
+        <label>Demo URL</label>
+        <input id='demo_url' name='demo_url' style="width:95%;" type="text" placeholder="http://APP_NAME-NAMESPACE.rhcloud.com/" />
+        <label>Cartridge Dependencies</label>
+        <input id='cartridge_deps' name='cartridge_deps' style="width:95%;" type="text" placeholder="nodejs mongodb-2.2" />
       </fieldset>
     </form>
   </div>
   <div class="modal-footer">
-    <a href="#" style="margin-left:15px;" onclick="test_submit();" class="btn btn-primary pull-right">Submit <b class='icon-ok'></b></a>
+    <a href="#" style="margin-left:15px;" class="btn btn-primary pull-right submit">Submit <b class='icon-ok'></b></a>
     <a href="#" data-dismiss="modal" onclick="$('#modal_create').modal('hide');" class="btn pull-right">Cancel <b class='icon-remove'></b></a>
   </div>
 </div>
