--- a/meteorshower.html
+++ b/meteorshower.html
@@ -22,9 +22,9 @@
 <template name="item">
   <div class="item row {{selected}}">
     <div style='float:left;width:25%;padding-left:3%;font-weight:bold;font-size:150%;' class="name"><a class='view'><img style='height:50px;width:50px;padding:8px;' src='{{image_url}}'/>{{name}}</a></div>
-    <div style='float:left;width:30%;' class="description">foobar {{description}}</div>
+    <div style='float:left;width:30%;' class="description">{{description}}</div>
     <div style='float:left;width:35%;'>
-      <div class="date">Sumbitted: {{date}}</div>
+      <div class="date">Submitted: {{date}}</div>
       <div class="author">By: {{author}}</div>
     </div>
     <div style='float:right:width:10%;font-weight:bold;'>
@@ -36,23 +36,23 @@
 </template>
 
 <template name="view">
-  <div class="test-area modal fade in" style="display:none;" id="modal_view">
+<div id='modal_view' class="modal fade in" style="display:none;">
   <div class="modal-header">
     <a href="#" style="margin-left:15px;" data-dismiss="modal" class="close pull-right;">&times;</a>
-    <h3 class="item_title">App Name</h3>
+    <h3 class="item_title">{{app_name}}</h3>
   </div>
   <div style="padding:17px;overflow-y:auto;" class="modal-body">
     <div class'image_url'><a href='{{demo_url}}'><img style='height:250px;width:250px;' src='{{image_url}}'/></a></div>
-    <div class='name'>{{name}}</div>
+    <div class='name'>{{app_name}}</div>
     <div class='description'>{{description}}</div>
-    <div class='author'>By: {{author}}</div>
+    <div class='authored_by'>By: <span class='author'>{{author}}</span></div>
     <div class='date'>Submitted on: {{date}}</div>
-    <div class='score'>{{score}}</div>
+    <div class='score'>Score: {{score}}</div>
     <div class='source_url'>Source code: <a href='{{source_url}}'>{{source_url}}</a></div>
     <p><a href="#" onclick="console.log('Opening app...');" style='text-decoration:none;margin:0% 20% 0% 20%;width:60%;' class="btn btn-large btn-inverse btn-block">Run on OpenShift <b class='icon-cog'></b></a></p>
   </div>
   <div class="modal-footer">
-    {{# if currentUser }}<a href="#" onclick="($('#modal_edit').modal('show') && $('#modal_view').modal('hide'))();" style='margin-right:10px;' class="pull-left btn btn-info">Settings <b class='icon-wrench'></b></a>{{/if}}
+    {{# if currentUser }}<a href="#" $('#modal_edit').modal('show') && $('#modal_view').modal('hide');" style='margin-right:10px;' class="edit pull-left btn btn-info">Settings <b class='icon-wrench'></b></a>{{/if}}
     <a href="{{demo_url}}" style="margin-left:15px;" onclick="console.log('Opening app...');" class="pull-right btn btn-primary">Visit <b class='icon-globe'></b></a>
     <a href="#" data-dismiss="modal" onclick="$('#modal_view').modal('hide');" class="btn pull-right">Cancel <b class='icon-remove'></b></a>
   </div>
@@ -60,34 +60,34 @@
 </template>
 
 <template name="edit">
-  <div class="test-area modal fade in" style="display:none;" id="modal_edit">
+  <div class="edit modal fade in" style="display:none;" id="modal_edit">
   <div class="modal-header">
     <a href="#" data-dismiss="modal" class="close">&times;</a>
     <h3 class="method_test_title">Edit</h3>
   </div>
   <div style="padding:17px;overflow-y:scroll;" class="modal-body">
-    <form id="test-code" class="form-horizontal" action="#" onsubmit="$('#modal_edit').modal('hide');return false;">
+    <form class="form-horizontal" action="#" onsubmit="$('#modal_edit').modal('hide');return false;">
       <fieldset style="margin:0px;padding:0px;">
         <label for="name">Name</label>
-        <input id="name" name="name" size="30" type="text" value="{{name}}" placeholder='Name your application&hellip;' />
+        <input class='name' id="name" name="name" size="30" type="text" value="{{app_name}}" placeholder='Name your application&hellip;' />
         <br/>
         <label for="description">Description</label>
-        <input id="description" name="description" size="30" type="text" value="{{description}}">
+        <input class='description' id="description" name="description" size="30" type="text" value="{{description}}">
         <br/>
         <label for="image_url">Image URL</label>
-        <input id="image_url" name="image_url" size="30" type="text" value="{{image_url}}" placeholder="http://">
+        <input class='image_url' id="image_url" name="image_url" size="30" type="text" value="{{image_url}}" placeholder="http://">
         <br/>
         <label for="source_url">Source URL</label>
-        <input id="source_url" name="source_url" size="30" type="text" value="{{source_url}}" placeholder="http://github.com/">
+        <input class='source_url' id="source_url" name="source_url" size="30" type="text" value="{{source_url}}" placeholder="http://github.com/">
         <br/>
         <label for="demo_url">Demo URL</label>
-        <input id="demo_url" name="demo_url" size="30" type="text" value="{{demo_url}}" placeholder="">
+        <input class='demo_url' id="demo_url" name="demo_url" size="30" type="text" value="{{demo_url}}" placeholder="">
         <br/>
         <label for="cartridge_deps">Cartridge Dependencies</label>
-        <input id="cartridge_deps" name="cartridge_deps" size="30" type="text" value="{{cartridge_deps}}" placeholder="nodejs mongodb-2.2">
+        <input class='cartridge_deps' id="cartridge_deps" name="cartridge_deps" size="30" type="text" value="{{cartridge_deps}}" placeholder="nodejs mongodb-2.2">
         <br/>
         <label for="score">Score</label>
-        <input id="score" name="score" size="30" type="text" value="{{score}}" placeholder="">
+        <input class='score' id="score" name="score" size="30" type="text" value="{{score}}" placeholder="">
         <br/>
         <div class="author">By: {{author}}</div>
       </fieldset>
@@ -96,13 +96,13 @@
   <div class="modal-footer">
     <a href="#" style="margin-left:15px;" class="btn-primary btn pull-right save">Save <b class='icon-ok'></b></a>
     <a href="#" class="btn-danger btn pull-left delete">Delete <b class='icon-trash'></b></a>
-    <a href="#" data-dismiss="modal" onclick="$('#modal_edit').modal('hide');" class="btn pull-right">Cancel <b class='icon-remove'></b></a>
+    <a href="#" data-dismiss="modal" class="btn pull-right">Cancel <b class='icon-remove'></b></a>
   </div>
 </div>
 </template>
 
 <template name="submit">
-  <div class="test-area modal fade in" style="display:none;" id="modal_create">
+  <div class="create modal fade in" style="display:none;" id="modal_create">
   <div class="modal-header">
     <a href="#" data-dismiss="modal" class="close">&times;</a>
     <h3 class="modal_title">New Showcase Item</h3>
@@ -111,17 +111,17 @@
     <form action="#" onsubmit="$('#modal_create').modal('hide');return false;">
       <fieldset>
         <label>Name</label>
-        <input id='name' name='name' style="width:95%;" type="text" placeholder="Name your application&hellip;" />
+        <input class='name' id='name' name='name' style="width:95%;" type="text" placeholder="Name your application&hellip;" />
         <label>Description</label>
-        <textarea id='description' name='description' style="width:95%;" rows="3"></textarea>
+        <textarea class='description' id='description' name='description' style="width:95%;" rows="3"></textarea>
         <label>Image URL</label>
-        <input id='image_url' name='image_url' style="width:95%;" type="text" placeholder="http://&hellip;" />
+        <input class='image_url' id='image_url' name='image_url' style="width:95%;" type="text" placeholder="http://&hellip;" />
         <label>Source URL</label>
-        <input id='source_url' name='source_url' style="width:95%;" type="text" placeholder="http://github.com/&hellip;" />
+        <input class='source_url' id='source_url' name='source_url' style="width:95%;" type="text" placeholder="http://github.com/&hellip;" />
         <label>Demo URL</label>
-        <input id='demo_url' name='demo_url' style="width:95%;" type="text" placeholder="http://APP_NAME-NAMESPACE.rhcloud.com/" />
+        <input class='demo_url' id='demo_url' name='demo_url' style="width:95%;" type="text" placeholder="http://APP_NAME-NAMESPACE.rhcloud.com/" />
         <label>Cartridge Dependencies</label>
-        <input id='cartridge_deps' name='cartridge_deps' style="width:95%;" type="text" placeholder="nodejs mongodb-2.2" />
+        <input class='cartridge_deps' id='cartridge_deps' name='cartridge_deps' style="width:95%;" type="text" placeholder="nodejs mongodb-2.2" />
       </fieldset>
     </form>
   </div>
