--- a/meteorshower.html
+++ b/meteorshower.html
@@ -21,13 +21,13 @@
 
 <template name="item">
   <div class="item row {{selected}}">
-    <div style='float:left;width:25%;padding-left:3%;font-weight:bold;font-size:150%;' class="name"><a class='view'><img style='height:50px;width:50px;padding:8px;' src='{{image_url}}'/>{{name}}</a></div>
-    <div style='float:left;width:30%;' class="description">{{description}}</div>
-    <div style='float:left;width:35%;'>
-      <div class="date">Submitted: {{date}}</div>
+    <div style='float:left;padding-left:3%;font-weight:bold;font-size:150%;' class="name span2"><a class='view'><img style='height:50px;width:50px;padding:8px;' src='{{image_url}}'/>{{name}}</a></div>
+    <div style='float:left;' class="description span4">{{description}}</div>
+    <div style='float:left;' class='span4'>
+      <div class="date">Submitted: {{datestring}} {{timestring}}</div>
       <div class="author">By: {{author}}</div>
     </div>
-    <div style='float:right:width:10%;font-weight:bold;'>
+    <div style='float:right;font-weight:bold;' class='span2'>
       <a class="dec" href="#"><b class='icon-minus-sign'></b></a>   
       <span style='font-size:larger;font-weight:bold;' class='score'>{{score}}</score>
       <a class="inc" href="#"><b class='icon-plus-sign'></b></a>   
@@ -49,7 +49,7 @@
     <div class='date'>Submitted on: {{date}}</div>
     <div class='score'>Score: {{score}}</div>
     <div class='source_url'>Source code: <a href='{{source_url}}'>{{source_url}}</a></div>
-    <p><a href="#" onclick="console.log('Opening app...');" style='text-decoration:none;margin:0% 20% 0% 20%;width:60%;' class="btn btn-large btn-inverse btn-block">Run on OpenShift <b class='icon-cog'></b></a></p>
+    <p><a href="{{clone_url}}" style='text-decoration:none;margin:0% 20% 0% 20%;width:60%;' class="shift btn btn-large btn-inverse btn-block">Run on OpenShift <b class='icon-cog'></b></a></p>
   </div>
   <div class="modal-footer">
     {{# if currentUser }}<a href="#" $('#modal_edit').modal('show') && $('#modal_view').modal('hide');" style='margin-right:10px;' class="edit pull-left btn btn-info">Settings <b class='icon-wrench'></b></a>{{/if}}
